# Copyright (c) 2016, 2026, Oracle and/or its affiliates.  All rights reserved.
# This software is dual-licensed to you under the Universal Permissive License (UPL) 1.0 as shown at https://oss.oracle.com/licenses/upl or Apache License 2.0 as shown at http://www.apache.org/licenses/LICENSE-2.0. You may choose either license.

[build-system]
requires = [
    "pbr==7.0.3; python_version < '3.8'",
    "setuptools==59.6.0; python_version == '3.6'",
    "setuptools==68.0.0; python_version == '3.7'",
    "setuptools==75.3.2; python_version == '3.8'",
    "setuptools==78.1.1,<81; python_version >= '3.9'",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "oci"
dynamic = ["version"]
description = "Oracle Cloud Infrastructure Python SDK"
readme = "README.rst"
authors = [
    {name = "Oracle", email = "jyoti.s.saini@oracle.com"},
    {name = "Vidhi Bhansali", email = "vidhi.bhansali@oracle.com"},
    {name = "Nishan Poojary", email = "nishan.poojary@oracle.com"},
    {name = "Nivedita Parihar", email = "nivedita.parihar@oracle.com"},
    {name = "Kalpana Ramasamy", email = "kalpana.ramasamy@oracle.com"},
]
license = {file = "LICENSE.txt"}
requires-python = ">=3.6"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: Universal Permissive License (UPL)",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "certifi",
    "configparser==4.0.2 ; python_version < '3'",
    "cryptography>=3.2.1,<50.0.0",
    "pyOpenSSL>=17.5.0,<27.0.0",
    "python-dateutil>=2.5.3,<3.0.0",
    "pytz>=2016.10",
    "circuitbreaker>=1.3.1,<2.0.0; python_version <= '3.6'",
    "circuitbreaker>=1.3.1,<3.0.0; python_version >= '3.7'",
    "urllib3==1.26.20; python_version < '3.10.0'",
    "urllib3>=2.6.3; python_version >= '3.10.0'",
    "PyJWT==2.4.0; python_version < '3.9'",
    "PyJWT>=2.12.0; python_version >= '3.9'",
]

[project.optional-dependencies]
adk = [
    "docstring-parser>=0.16; python_version >= '3.10' and python_version < '4'",
    "pydantic>=2.10.6,<3; python_version >= '3.10' and python_version < '4'",
    "rich>=13.9.4; python_version >= '3.10' and python_version < '4'",
    "mcp>=1.9.0; python_version >= '3.10' and python_version < '4'",
]

[project.urls]
"Homepage" = "https://oracle-cloud-infrastructure-python-sdk.readthedocs.io/en/latest/index.html"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "oci.version.__version__"}

[tool.coverage.run]
source = ["src"]

[tool.flake8]
ignore = ["D203","E501","W504","W292"]
exclude = [
    ".sdk-venv",
    ".git",
    ".tox",
    "__pycache__",
    "docs/conf.py",
    "build",
    "dist",
    "src/oci/_vendor",
    "src/oci/healthchecks/health_checks_client.py",
    "src/oci/cloud_events/cloud_events_client.py",
    "src/oci/telemetry/telemetry_client.py",
    "src/oci/waas/models/waf_log.py",
    "src/oci/functions/functions_invoke_client.py"
]
max_line_length = 99